Tue Oct 20 12:17:56 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Add basic argument checking to Prime.prime?
	    [Bug #11606]

Tue Oct 20 12:17:50 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Optimize Integer#prime?
	  Patch by Nick Slocum [Bug #10354]

Tue Oct 20 08:12:47 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: pthread_getattr_np is broken on AIX.
	  More specifically, the stack address and size returned are
	  not correct.

Tue Oct 20 05:54:46 2015  Eric Wong  <e@80x24.org>

	* ext/fiddle/closure.c (callback): static function

Mon Oct 19 10:33:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/init.c (rsock_raise_socket_error): get rid of a glibc
	  bug.  [ruby-core:71100] [Bug #11600]

Mon Oct 19 01:26:26 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_file_identical_p): not necessary to compare the paths after
	  comparing the file indexes on Windows.  designate by kosaki.

Sun Oct 18 21:17:27 2015  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: Specify frozen_string_literal: true.

Sun Oct 18 14:37:56 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (fill_random_bytes_urandom): add a comment why using
	  O_NONBLOCK and O_NOCTTY.

Sun Oct 18 13:24:17 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (fill_random_bytes_syscall): use ATOMIC_SET() for
	  updating try_syscall.

Sun Oct 18 13:03:52 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/backward/util.h: Good-by Borland-C.

Sun Oct 18 13:03:09 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* common.mk: add a comment how to use "make test-all"

Sun Oct 18 12:59:22 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* common.mk: add comments how to use "make benchmark"

Sun Oct 18 12:58:15 2015  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: Specify frozen_string_literal: true.

Sun Oct 18 11:22:52 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
